--- a/deposit.html
+++ b/deposit.html
@@ -15,7 +15,6 @@
 
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    
     body {
       font-family: 'Montserrat', sans-serif;
       background-color: #4834d4;
@@ -25,7 +24,6 @@
       justify-content: center;
       height: 100vh;
     }
-
     .deposit-container {
       background-color: #fff;
       color: #333;
@@ -35,22 +33,18 @@
       width: 90%;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
-
     .deposit-container h2 {
       text-align: center;
       margin-bottom: 20px;
     }
-
     .deposit-form {
       display: flex;
       flex-direction: column;
     }
-
     .deposit-form label {
       margin-bottom: 5px;
       font-weight: bold;
     }
-
     .deposit-form input {
       padding: 10px;
       margin-bottom: 20px;
@@ -58,7 +52,6 @@
       border-radius: 5px;
       font-size: 1rem;
     }
-
     .deposit-form button {
       padding: 10px;
       background-color: #4834d4;
@@ -68,7 +61,6 @@
       font-size: 1rem;
       cursor: pointer;
     }
-
     .back-button {
       display: block;
       margin: 20px auto;
@@ -97,9 +89,11 @@
   <script>
     document.getElementById("depositForm").addEventListener("submit", function(e){
       e.preventDefault();
-      const amount = document.getElementById("depositAmount").value;
-      alert("Depositing UGX " + amount);
-      // In a real app, you might send this to your backend then redirect.
+      const depositAmount = Number(document.getElementById("depositAmount").value);
+      let currentBalance = Number(localStorage.getItem("balance")) || 0;
+      let newBalance = currentBalance + depositAmount;
+      localStorage.setItem("balance", newBalance);
+      alert("Deposited UGX " + depositAmount);
       window.location.href = "index.html";
     });
   </script>
