--- a/withdraw.html
+++ b/withdraw.html
@@ -4,15 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Withdraw Money</title>
-
-  <!-- Google Fonts: Using the provided fonts -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -85,7 +82,6 @@
     </form>
     <a href="index.html" class="back-button">Back</a>
   </div>
-
   <script>
     document.getElementById("withdrawForm").addEventListener("submit", function(e){
       e.preventDefault();
@@ -97,12 +93,10 @@
       }
       let newBalance = currentBalance - withdrawAmount;
       localStorage.setItem("balance", newBalance);
-      
       // Record transaction.
       let transactions = JSON.parse(localStorage.getItem("transactions")) || [];
       transactions.push({ type: "withdrawal", amount: withdrawAmount, date: new Date().toLocaleString() });
       localStorage.setItem("transactions", JSON.stringify(transactions));
-      
       alert("Withdrew UGX " + withdrawAmount);
       window.location.href = "index.html";
     });
