--- a/card.html
+++ b/card.html
@@ -1,1 +1,401 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Card UI</title>
+  <!-- Google Fonts (Updated to use our wallet fonts) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Outfit:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <!-- Font Awesome for icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+  <style>
+    /* Global reset */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      /* Changed from Poppins to Montserrat */
+      font-family: 'Montserrat', sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+    }
 
+    /* Retained poppins classes for font-weight.
+       They now inherit Montserrat from body */
+    .poppins-semibold { font-weight: 600; }
+    .poppins-regular { font-weight: 400; }
+    .poppins-medium { font-weight: 500; }
+    .poppins-bold { font-weight: 700; }
+
+    .container {
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto;
+      min-height: 100vh;
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+    }
+
+    /* Top bar */
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #fff;
+      padding: 16px 20px;
+    }
+    .top-bar h1 {
+      font-size: 1.25rem;
+      color: #000;
+    }
+    .add-card-btn {
+      background-color: #4831d4;
+      color: #fff;
+      border: none;
+      border-radius: 50%;
+      width: 35px;
+      height: 35px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+
+    /* Purple section */
+    .purple-section {
+      background-color: #4831d4;
+      height: 100px;
+      width: 100%;
+      position: relative;
+    }
+
+    /* Card */
+    .card {
+      background-color: #1d267d;
+      color: #fff;
+      border-radius: 15px;
+      width: 95%;
+      margin: -60px auto 0 auto; /* Overlap purple section */
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      position: relative;
+      z-index: 1;
+    }
+    .card-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .card-logo {
+      font-size: 1rem;
+    }
+    .card-virtua {
+      font-size: 0.875rem;
+      letter-spacing: 1px;
+    }
+
+    .card-details {
+      margin-top: 15px;
+    }
+
+    .card-number {
+      font-size: 1.375rem;
+      margin-bottom: 10px;
+      letter-spacing: 1px;
+    }
+
+    .expiry-cvv-container {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 5px;
+    }
+    .card-expiry,
+    .card-cvv {
+      font-size: 0.875rem;
+    }
+
+    .card-name {
+      font-size: 1rem;
+      text-transform: uppercase;
+      margin-top: 8px;
+    }
+    .card-footer {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 15px;
+    }
+    .card-footer i {
+      font-size: 1.5rem;
+    }
+
+    /* Balance Section */
+    .balance-section {
+      padding: 20px;
+    }
+    .balance-section h2 {
+      font-size: 1rem;
+      color: #555;
+    }
+    .balance {
+      font-size: 1.5rem;
+      color: #4831d4;
+      margin: 8px 0 15px;
+    }
+    .balance-actions {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 10px;
+    }
+    .balance-actions button {
+      background-color: #fff;
+      color: #4831d4;
+      border: 2px solid #4831d4;
+      padding: 10px 15px;
+      border-radius: 25px;
+      cursor: pointer;
+      font-size: 1rem;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
+    /* Actions List */
+    .actions-list {
+      padding: 0 20px 20px;
+    }
+    .action-item {
+      display: flex;
+      align-items: center;
+      padding: 15px 0;
+      border-bottom: 1px solid #eee;
+    }
+    .action-item:last-child {
+      border-bottom: none;
+    }
+    .action-icon {
+      color: #4831d4;
+      margin-right: 15px;
+      font-size: 1.25rem;
+      width: 25px;
+      text-align: center;
+    }
+    .action-text {
+      flex-grow: 1;
+      font-size: 1rem;
+    }
+    .action-arrow {
+      color: #4831d4;
+    }
+    .remove-card .action-icon {
+      color: red;
+    }
+    .remove-card .action-text {
+      color: red;
+    }
+
+    /* Toggle Switch */
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 40px;
+      height: 22px;
+    }
+    .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+      border-radius: 34px;
+    }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 14px;
+      width: 14px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+    input:checked + .slider {
+      background-color: #4831d4;
+    }
+    input:checked + .slider:before {
+      transform: translateX(18px);
+    }
+
+    /* Footer Nav */
+    footer {
+      background-color: #fff;
+      border-top: 1px solid #eee;
+      padding: 10px 0;
+      margin-top: auto;
+    }
+    footer nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: space-around;
+      margin: 0;
+      padding: 0;
+    }
+    footer nav ul li a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #777;
+      text-decoration: none;
+      font-size: 0.75rem;
+      padding: 5px;
+    }
+    footer nav ul li.active a {
+      color: #4831d4;
+    }
+    footer nav ul li a i {
+      font-size: 1.25rem;
+      margin-bottom: 5px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <!-- Top bar -->
+    <div class="top-bar">
+      <h1 class="poppins-semibold">Cards</h1>
+      <button class="add-card-btn" aria-label="Add Card">
+        <i class="fas fa-plus"></i>
+      </button>
+    </div>
+
+    <!-- Purple section -->
+    <div class="purple-section"></div>
+
+    <!-- The Card -->
+    <div class="card">
+      <div class="card-header">
+        <div class="card-logo">
+          <i class="fa-regular fa-copyright"></i>
+        </div>
+        <div class="card-virtua poppins-regular">VIRTUA</div>
+      </div>
+      <div class="card-details">
+        <div class="card-number poppins-medium">4519 46** **** 9418</div>
+        <div class="expiry-cvv-container">
+          <div class="card-expiry poppins-regular">VALID THRU 02/28</div>
+          <div class="card-cvv poppins-regular">CVV ***</div>
+        </div>
+        <div class="card-name poppins-bold">KAKEETO DANIEL</div>
+      </div>
+      <div class="card-footer">
+        <i class="fa-brands fa-cc-visa"></i>
+      </div>
+    </div>
+
+    <!-- Balance Section -->
+    <div class="balance-section">
+      <h2 class="poppins-medium">Available balance</h2>
+      <div class="balance poppins-bold">UGX 30,356,643.23</div>
+      <div class="balance-actions">
+        <button class="add-money">
+          <i class="fas fa-plus"></i> Add money
+        </button>
+        <button class="withdraw">
+          <i class="fas fa-arrow-down"></i> Withdraw
+        </button>
+      </div>
+    </div>
+
+    <!-- Actions List -->
+    <div class="actions-list">
+      <div class="action-item">
+        <div class="action-icon">
+          <i class="fas fa-exchange-alt"></i>
+        </div>
+        <div class="action-text poppins-regular">Transactions</div>
+        <div class="action-arrow">
+          <i class="fas fa-chevron-right"></i>
+        </div>
+      </div>
+      <div class="action-item">
+        <div class="action-icon">
+          <i class="fas fa-snowflake"></i>
+        </div>
+        <div class="action-text poppins-regular">Freeze card</div>
+        <label class="switch">
+          <input type="checkbox" aria-label="Freeze card toggle">
+          <span class="slider round"></span>
+        </label>
+      </div>
+      <div class="action-item">
+        <div class="action-icon">
+          <i class="fas fa-map-marker-alt"></i>
+        </div>
+        <div class="action-text poppins-regular">Billing address</div>
+      </div>
+      <div class="action-item remove-card">
+        <div class="action-icon">
+          <i class="fas fa-trash-alt"></i>
+        </div>
+        <div class="action-text poppins-regular">Remove card</div>
+      </div>
+    </div>
+
+    <!-- Footer Navigation -->
+    <footer>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">
+              <i class="fas fa-wallet"></i>
+              Balance
+            </a>
+          </li>
+          <li class="active">
+            <a href="#">
+              <i class="fa-regular fa-credit-card"></i>
+              Cards
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-paper-plane"></i>
+              Send
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-money-bill-wave"></i>
+              Earn
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-ellipsis-h"></i>
+              More
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
+  </div>
+</body>
+</html>
