--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </div>
       <div class="nav-item">
         <span class="material-icons">credit_card</span>
-        <span>Cards</span>
+        <a href= "card.html"><span>Cards</span></a>
       </div>
       <div class="nav-item">
         <span class="material-icons">send</span>
