--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
       UGX: 1,
       EUR: 0.00025,
       GBP: 0.00022,
-      GHC: 0.0029,
+      GHS: 0.0029,
       KES: 0.033,
       NGN: 0.0019,
       USD: 0.00026,
       CAD: 0.00035,
       JPY: 0.038
     };
-    const currencies = ["UGX", "EUR", "GBP", "GHC", "KES", "NGN", "USD", "CAD", "JPY"];
+    const currencies = ["UGX", "EUR", "GBP", "GHS", "KES", "NGN", "USD", "CAD", "JPY"];
     let currentCurrencyIndex = 0;
     let currentDisplayedValue = currentBalanceUGX * exchangeRates[currencies[currentCurrencyIndex]];
 
