--- a/card.html
+++ b/card.html
@@ -18,23 +18,18 @@
   />
   <style>
     /* Global reset */
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      /* Changed to Montserrat */
       font-family: 'Montserrat', sans-serif;
       background-color: #f5f5f5;
       color: #333;
     }
-    /* Retained font-weight classes (names remain the same) */
+    /* Retained font-weight classes */
     .poppins-semibold { font-weight: 600; }
     .poppins-regular { font-weight: 400; }
     .poppins-medium { font-weight: 500; }
     .poppins-bold { font-weight: 700; }
-    
+
     .container {
       width: 100%;
       max-width: 600px;
@@ -52,10 +47,7 @@
       background-color: #fff;
       padding: 16px 20px;
     }
-    .top-bar h1 {
-      font-size: 1.25rem;
-      color: #000;
-    }
+    .top-bar h1 { font-size: 1.25rem; color: #000; }
     .add-card-btn {
       background-color: #4831d4;
       color: #fff;
@@ -88,21 +80,25 @@
       position: relative;
       z-index: 1;
     }
+    /* Toggle details button */
+    .toggle-details-btn {
+      background: none;
+      border: none;
+      color: #fff;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 1.25rem;
+      cursor: pointer;
+    }
     .card-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-    .card-logo {
-      font-size: 1rem;
-    }
-    .card-virtua {
-      font-size: 0.875rem;
-      letter-spacing: 1px;
-    }
-    .card-details {
-      margin-top: 15px;
-    }
+    .card-logo { font-size: 1rem; }
+    .card-virtua { font-size: 0.875rem; letter-spacing: 1px; }
+    .card-details { margin-top: 15px; }
     .card-number {
       font-size: 1.375rem;
       margin-bottom: 10px;
@@ -114,36 +110,16 @@
       gap: 20px;
       margin-bottom: 5px;
     }
-    .card-expiry,
-    .card-cvv {
-      font-size: 0.875rem;
-    }
-    .card-name {
-      font-size: 1rem;
-      text-transform: uppercase;
-      margin-top: 8px;
-    }
-    .card-footer {
-      display: flex;
-      justify-content: flex-end;
-      margin-top: 15px;
-    }
-    .card-footer i {
-      font-size: 1.5rem;
-    }
-    /* Balance Section (Displays Card Balance) */
-    .balance-section {
-      padding: 20px;
-    }
-    .balance-section h2 {
-      font-size: 1rem;
-      color: #555;
-    }
-    .balance {
-      font-size: 1.5rem;
-      color: #4831d4;
-      margin: 8px 0 15px;
-    }
+    .card-expiry, .card-cvv { font-size: 0.875rem; }
+    /* Assign IDs for toggling */
+    #cardExpiry, #cardCvv { }
+    .card-name { font-size: 1rem; text-transform: uppercase; margin-top: 8px; }
+    .card-footer { display: flex; justify-content: flex-end; margin-top: 15px; }
+    .card-footer i { font-size: 1.5rem; }
+    /* Balance Section */
+    .balance-section { padding: 20px; }
+    .balance-section h2 { font-size: 1rem; color: #555; }
+    .balance { font-size: 1.5rem; color: #4831d4; margin: 8px 0 15px; }
     .balance-actions {
       display: flex;
       justify-content: space-around;
@@ -161,7 +137,29 @@
       align-items: center;
       gap: 5px;
     }
-    /* Transactions (Styled like wallet index.html) */
+    /* Actions List (Static Menu) */
+    .actions-list {
+      padding: 0 20px 20px;
+    }
+    .action-item {
+      display: flex;
+      align-items: center;
+      padding: 15px 0;
+      border-bottom: 1px solid #eee;
+    }
+    .action-item:last-child { border-bottom: none; }
+    .action-icon {
+      color: #4831d4;
+      margin-right: 15px;
+      font-size: 1.25rem;
+      width: 25px;
+      text-align: center;
+    }
+    .action-text { flex-grow: 1; font-size: 1rem; }
+    .action-arrow { color: #4831d4; }
+    .remove-card .action-icon { color: red; }
+    .remove-card .action-text { color: red; }
+    /* Transactions Section */
     .transactions {
       padding: 20px;
       background-color: #fff;
@@ -174,9 +172,11 @@
       align-items: center;
       margin-bottom: 15px;
     }
-    .transactions-header h2 {
-      font-size: 1rem;
+    .transactions-header h2 { font-size: 1rem; color: #4831d4; }
+    .transactions-header a {
+      text-decoration: none;
       color: #4831d4;
+      font-size: 0.95rem;
     }
     .transaction-item {
       display: flex;
@@ -185,68 +185,20 @@
       padding: 15px 0;
       border-bottom: 1px solid #eee;
     }
-    .transaction-item:last-child {
-      border-bottom: none;
-    }
+    .transaction-item:last-child { border-bottom: none; }
     .transaction-item-left {
       display: flex;
       align-items: center;
       gap: 0.6rem;
     }
-    .transaction-item-left i {
-      font-size: 25px;
-      color: #4831d4;
-    }
+    .transaction-item-left i { font-size: 25px; color: #4831d4; }
     .transaction-details {
       display: flex;
       flex-direction: column;
     }
-    .transaction-type {
-      font-size: 1rem;
-      font-weight: 500;
-      margin-bottom: 2px;
-    }
-    .transaction-date {
-      font-size: 0.85rem;
-      color: #999;
-    }
-    .transaction-amount {
-      font-weight: 600;
-      font-size: 1rem;
-    }
-    /* Actions List (Static Menu) */
-    .actions-list {
-      padding: 0 20px 20px;
-    }
-    .action-item {
-      display: flex;
-      align-items: center;
-      padding: 15px 0;
-      border-bottom: 1px solid #eee;
-    }
-    .action-item:last-child {
-      border-bottom: none;
-    }
-    .action-icon {
-      color: #4831d4;
-      margin-right: 15px;
-      font-size: 1.25rem;
-      width: 25px;
-      text-align: center;
-    }
-    .action-text {
-      flex-grow: 1;
-      font-size: 1rem;
-    }
-    .action-arrow {
-      color: #4831d4;
-    }
-    .remove-card .action-icon {
-      color: red;
-    }
-    .remove-card .action-text {
-      color: red;
-    }
+    .transaction-type { font-size: 1rem; font-weight: 500; margin-bottom: 2px; }
+    .transaction-date { font-size: 0.85rem; color: #999; }
+    .transaction-amount { font-weight: 600; font-size: 1rem; }
     /* Toggle Switch */
     .switch {
       position: relative;
@@ -254,11 +206,7 @@
       width: 40px;
       height: 22px;
     }
-    .switch input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
+    .switch input { opacity: 0; width: 0; height: 0; }
     .slider {
       position: absolute;
       cursor: pointer;
@@ -278,12 +226,8 @@
       transition: .4s;
       border-radius: 50%;
     }
-    input:checked + .slider {
-      background-color: #4831d4;
-    }
-    input:checked + .slider:before {
-      transform: translateX(18px);
-    }
+    input:checked + .slider { background-color: #4831d4; }
+    input:checked + .slider:before { transform: translateX(18px); }
     /* Footer Navigation */
     footer {
       background-color: #fff;
@@ -307,9 +251,7 @@
       font-size: 0.75rem;
       padding: 5px;
     }
-    footer nav ul li.active a {
-      color: #4831d4;
-    }
+    footer nav ul li.active a { color: #4831d4; }
     footer nav ul li a i {
       font-size: 1.25rem;
       margin-bottom: 5px;
@@ -335,11 +277,15 @@
         </div>
         <div class="card-virtua poppins-regular">VIRTUA</div>
       </div>
+      <!-- Eye icon to toggle card details -->
+      <button id="toggleDetails" class="toggle-details-btn" aria-label="Show card details">
+        <i class="fas fa-eye"></i>
+      </button>
       <div class="card-details">
         <div class="card-number poppins-medium" id="cardNumber">4519 46** **** 9418</div>
         <div class="expiry-cvv-container">
-          <div class="card-expiry poppins-regular">VALID THRU 02/28</div>
-          <div class="card-cvv poppins-regular">CVV ***</div>
+          <div class="card-expiry poppins-regular" id="cardExpiry">VALID THRU 02/28</div>
+          <div class="card-cvv poppins-regular" id="cardCvv">CVV ***</div>
         </div>
         <div class="card-name poppins-bold">KAKEETO DANIEL</div>
       </div>
@@ -359,15 +305,6 @@
           <i class="fas fa-arrow-down"></i> Withdraw
         </button>
       </div>
-    </div>
-    <!-- Transactions Section (designed like wallet index.html) -->
-    <div class="transactions" id="transactionLog">
-      <div class="transactions-header">
-        <h2>Transactions</h2>
-        <!-- You can add a "See" link if desired -->
-        <a href="#">See</a>
-      </div>
-      <!-- Transaction items will be injected here by JavaScript -->
     </div>
     <!-- Actions List (Static Menu) -->
     <div class="actions-list">
@@ -402,6 +339,10 @@
         </div>
         <div class="action-text poppins-regular">Remove card</div>
       </div>
+    </div>
+    <!-- Transactions Section (Below the actions list) -->
+    <div class="transactions" id="transactionLog">
+      <!-- Transaction items will be injected here by JavaScript -->
     </div>
     <!-- Footer Navigation -->
     <footer>
@@ -441,8 +382,26 @@
       </nav>
     </footer>
   </div>
+
   <script>
-    // Initialize balances and transactions if not present.
+    // --- Card details toggle functionality ---
+    let showCardDetails = false;
+    // Full vs masked card details
+    const fullCardNumber = "4519 4612 3456 9418";
+    const maskedCardNumber = "4519 46** **** 9418";
+    const fullCvv = "CVV 123";
+    const maskedCvv = "CVV ***";
+    // Toggle details when eye icon is clicked.
+    document.getElementById("toggleDetails").addEventListener("click", function(){
+      showCardDetails = !showCardDetails;
+      // Update icon (optional: toggle between eye and eye-slash)
+      this.innerHTML = showCardDetails ? '<i class="fas fa-eye-slash"></i>' : '<i class="fas fa-eye"></i>';
+      // Update displayed card details.
+      document.getElementById("cardNumber").textContent = showCardDetails ? fullCardNumber : maskedCardNumber;
+      document.getElementById("cardCvv").textContent = showCardDetails ? fullCvv : maskedCvv;
+    });
+
+    // --- Balances and Transactions ---
     if (!localStorage.getItem("walletBalance")) {
       localStorage.setItem("walletBalance", "1000000"); // default wallet balance
     }
@@ -452,27 +411,21 @@
     if (!localStorage.getItem("cardTransactions")) {
       localStorage.setItem("cardTransactions", JSON.stringify([]));
     }
-
     // Helper to format currency.
     function formatCurrency(amount) {
       return "UGX " + Number(amount).toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 });
     }
-
-    // Update the card balance display.
+    // Update card balance display.
     function updateCardDisplay() {
       const cardBalance = Number(localStorage.getItem("cardBalance"));
       document.getElementById("cardBalanceDisplay").textContent = formatCurrency(cardBalance);
     }
-
-    // Update the transactions log using a design similar to wallet index.html.
+    // Update transactions log.
     function updateTransactionLog() {
       const txLogEl = document.getElementById("transactionLog");
       let transactions = JSON.parse(localStorage.getItem("cardTransactions")) || [];
-      // Reverse to show the most recent first.
       transactions = transactions.slice().reverse();
-      // Build the transaction items using the same structure as wallet index.html.
       const txItems = transactions.map(tx => {
-        // Use a card icon (fa-credit-card) as an extra icon.
         let iconHtml = `<i class="fas fa-credit-card"></i>`;
         let sign = tx.type === "deposit" ? "+" : "-";
         return `
@@ -496,12 +449,10 @@
         ${txItems}
       `;
     }
-
-    // Initial display updates.
+    // Initial display update.
     updateCardDisplay();
     updateTransactionLog();
-
-    // Event listener for "Add money" button.
+    // --- Button operations ---
     document.getElementById("addMoneyBtn").addEventListener("click", function(){
       let amount = parseFloat(prompt("Enter amount to add to card (will be deducted from wallet):"));
       if (isNaN(amount) || amount <= 0) return alert("Please enter a valid amount.");
@@ -509,13 +460,11 @@
       if (amount > walletBalance) {
         return alert("Insufficient wallet funds!");
       }
-      // Deduct from wallet, add to card.
       walletBalance -= amount;
       let cardBalance = Number(localStorage.getItem("cardBalance"));
       cardBalance += amount;
       localStorage.setItem("walletBalance", walletBalance);
       localStorage.setItem("cardBalance", cardBalance);
-      // Record transaction.
       let transactions = JSON.parse(localStorage.getItem("cardTransactions")) || [];
       transactions.push({ type: "deposit", amount: amount, date: new Date().toLocaleString() });
       localStorage.setItem("cardTransactions", JSON.stringify(transactions));
@@ -523,8 +472,6 @@
       updateTransactionLog();
       alert("Transferred " + formatCurrency(amount) + " from wallet to card.");
     });
-
-    // Event listener for "Withdraw" button.
     document.getElementById("withdrawMoneyBtn").addEventListener("click", function(){
       let amount = parseFloat(prompt("Enter amount to withdraw from card (will be added to wallet):"));
       if (isNaN(amount) || amount <= 0) return alert("Please enter a valid amount.");
@@ -537,7 +484,6 @@
       walletBalance += amount;
       localStorage.setItem("cardBalance", cardBalance);
       localStorage.setItem("walletBalance", walletBalance);
-      // Record transaction.
       let transactions = JSON.parse(localStorage.getItem("cardTransactions")) || [];
       transactions.push({ type: "withdrawal", amount: amount, date: new Date().toLocaleString() });
       localStorage.setItem("cardTransactions", JSON.stringify(transactions));
